changed party managing code to use a new PartyManager class.